<resources>
    <string name="app_name">todoFreddy</string>
    <string name="action_settings">Settings</string>
    <string name="testSting">Texto de prueba</string>
    <string name="nombre">Nombre:</string>
    <string name="hintNombre">Escriba un Nombre:</string>
    <string name="hintActividad">Escriba la Actividad:</string>
    <string name="Actividad">Actividad:</string>
    <string name="Guardar">Guardar</string>
    <string name="error_valid">Sucedio un error al hacer la validación</string>
    <string name="action_refresh">refrescar</string>

</resources>
